# CTF-Solver

./: .gitignore  FLOW_MAP.md  README.md  README_WINDOWS.md  install.sh  package.json
.history/sidecar/: solver_20260324194519.py
apt_artifacts/: adaptive_decomposition.json  apt_upgrade_manifest.json  benchmark_harness.json  concolic_plan.json  deterministic_lab.sh  exploit_candidates.json  formal_verifier_report.json  multi_source_intel.json  protocol_state_machine.json  self_play_red_team.md  side_channel_module.json
changes/: difficulty_estimator.py  failure_analyzer.py  haiku_critic.py  hypothesis_fanout.py  knowledge_graph.py  rag_store.py  self_play_debate.py  thinking_budget.py
scripts/: _fix2.py  audit_inject.py  fix_injections.py  verify_changes.py
sidecar/: platforms.py  requirements.txt  solver.py
sidecar/ai/: __init__.py  memory.py  model.py  prompt.py
sidecar/cluster/: branch_pool.py  dispatcher.py  result_merger.py  worker.py
sidecar/core/: __init__.py  budget.py  checkpoint.py  context_compressor.py  orchestrator.py  parsing.py  routing.py  state.py  tool_runtime.py  verification.py
sidecar/fileformats/: custom_codec_solver.py  magic_analyzer.py  parser_builder.py
sidecar/flag/: __init__.py  context_model.py  entropy_model.py  extractor.py  prefix_model.py  scorer.py  submit_guard.py
sidecar/fuzz/: coverage_tracker.py  crash_analyzer.py  exploit_from_crash.py  input_mutator.py
sidecar/intel/: ctftime_scraper.py  github_scraper.py  (+2 more)
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+107 files in other folders)
