[package]
name = "ctf-solver"
version = "1.0.0"
description = "Autonomous CTF Solver — Tauri backend"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
	"window-close",
	"window-minimize",
	"window-maximize",
	"window-set-title",
	"shell-open"
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
uuid        = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default     = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", tag = "wry-v0.24.12" }
